# rust-log-etl

./: Cargo.toml  LICENSE  README.md
config/: log_config.toml
src/: builder.rs  cli.rs  config.rs  dlq.rs  error.rs  lib.rs  main.rs  pipeline.rs
src/core/: mod.rs  parser.rs  sink.rs  transformer.rs
src/parsers/: json_log.rs  mod.rs  nginx_log.rs
src/sink/: file.rs  mod.rs
src/transformers/: enrich.rs  filter.rs  mod.rs
test_data/: output.json
