[package]
name = "rust-log-etl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
thiserror = "2"
tokio = {version = "1", features = ["full"]}
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
once_cell = "1.21.4"
clap = { version = "4.6.0", features = ["derive"] }
toml = "1.0"